--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rustfft = "5.1.0"
+num-complex = "0.4.0"
 wgpu = "0.16.2"
 pollster = "0.2"
 futures-intrusive = "0.4"
